--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,5 @@
 	{platform_define, "^R14", no_callbacks}
 ]}.
 {deps, [
-	{jiffy, ".*", {git, "http://github.com/davisp/jiffy.git", {tag, "0.14.2"}}}
+	{jiffy, ".*", {git, "https://github.com/davisp/jiffy.git", {tag, "0.14.2"}}}
 ]}.
